--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "> 애니메이션 팬들을 위한 각종 뉴스와 정보를 제공해 드립니다.\r <br />",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "react-scripts test",
     "start": "react-scripts start",
